--- a/src/App/sass/index.scss
+++ b/src/App/sass/index.scss
@@ -84,38 +84,67 @@ html {
       flex-direction: column;
       justify-content: space-evenly;
       background: url("../img/img_e3malcuqbo75.png");
-      background-size: cover;
-      min-height: 100vh;
-      .home-firstpart-title, h1, h2{
-        display: inline-flex;
-        padding: 10px;
+      height: 600px;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      .home-firstpart-title, h1, h2 {
+        position: relative;
         h1 {
-          position: relative;
+          left: -73px;
+          bottom: 77px;
           background-color: $bl-color;
           font-size: large;
+          color: $bg-color;
+          text-align: center;
+          padding: 15px 2px 10px 0px;
         }
         h2 {
-          position: absolute;
+          font-family: 'PlayfairDisplay-VariableFont';
+          left: 63px;
+          bottom: 83px;
           background-color: $bg-color;
-          font-size: large;
+          font-size: xx-large;
+          color: $or-color;
+          padding: 2px 15px 8px;
         }
       }
       form {
-        padding: 10px 10px 20px;
+        padding: 15px 10px 30px 10px;
         position: absolute;
         bottom: -10px;
         background-color: $or-color;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
+        width: 875px;
         .inner-form {
           display: inline-flex;
+          .input-field {
+            margin-right: 30px;
+            .zero-wrap {
+              flex-grow: 1;
+            }
+          }
+          .input-field input {
+            height: 100%;
+            background: #fff;
+            border-radius: 0.5px;
+            border: 0;
+            display: block;
+            width: 100%;
+            padding: 10px 10px 10px 10px;
+            font-size: 18px;
+          }
         }
         .plus-search {
-          font-size: small;
+          font-size: 1.2em;
           position: absolute;
-          bottom: 0px;
-          right: 10px;
+          bottom: 8px;
+          right: 50px;
+          color: $bg-color;
+          font-weight: bold;
+        }
+        .btn-search {
+          width: 50px;
+          height: 50px;
         }
       }
     }
@@ -127,6 +156,15 @@ html {
     font-size: 56.25%;
     body header {
       padding: 2.2rem 5rem;
+    }
+    body section#home-firstpart {
+      form {
+        bottom: -150px;
+        width: auto;
+        .inner-form {
+          display: block;
+        }
+      }
     }
   }
 }
@@ -157,8 +195,16 @@ html {
         z-index: 1;
       }
     }
-    html body #home-firstpart form {
-      display: unset;
+    body section#home-firstpart {
+      justify-content: unset;
+      background-size: auto;
+        .home-firstpart-title, h1, h2 {
+          position: unset;
+          padding: 15px;
+        }
+      form {
+        display: unset;
+      }
     }
   }
 }
