--- a/src/App/index.html
+++ b/src/App/index.html
@@ -64,10 +64,16 @@
                     <input id="search-vente" type="text" placeholder="Vente">
                 </div>
                 <div class="input-field first-wrap">
-                    <input id="search-type" type="text" placeholder="Type de bien">
+                    <input id="search-type" type="text" placeholder="Type de biens">
                 </div>
                 <div class="input-field second-wrap">
-                    <input id="location" type="text" placeholder="Où ? ex : Région, Département, CP, Ville...">
+                    <input id="location" type="text" required> 
+                    <div class="placeholder">
+                        Où ? 
+                        <span>
+                            ex : Région, Département, CP, Ville...
+                        </span>
+                    </div>
                 </div>
                 <div class="input-field first-wrap">
                     <input id="search-distance" type="text" placeholder="0 Km">
