--- a/src/App/sass/index.scss
+++ b/src/App/sass/index.scss
@@ -83,8 +83,8 @@ html {
       align-items: center;
       flex-direction: column;
       justify-content: space-evenly;
-      background: url("../img/img_e3malcuqbo75.png");
-      height: 600px;
+      background-image: url("../img/img_e3malcuqbo75.png");
+      height: 800px;
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
@@ -110,17 +110,38 @@ html {
         }
       }
       form {
-        padding: 15px 10px 30px 10px;
+        padding: 10px 10px 20px 10px;
         position: absolute;
         bottom: -10px;
         background-color: $or-color;
-        width: 875px;
         .inner-form {
           display: inline-flex;
           .input-field {
-            margin-right: 30px;
-            .zero-wrap {
-              flex-grow: 1;
+            position: relative;
+            padding: 10px;
+            input#location {
+              width: 400px;
+            }
+            ::placeholder {
+              color: #000000;
+            }
+            .placeholder {
+              position: absolute;
+              pointer-events: none;
+              top: 20px;
+              left: 20px;
+              margin: auto;
+              font-size: large;
+              color: #000000;
+              span {
+                color: $or-color;
+              }
+            }
+            input#location:valid + .placeholder {
+              display: none;
+            }
+            input#search-distance {
+              width: 100px;
             }
           }
           .input-field input {
@@ -141,10 +162,20 @@ html {
           right: 50px;
           color: $bg-color;
           font-weight: bold;
+          cursor: pointer;
         }
         .btn-search {
+          border: none;
           width: 50px;
           height: 50px;
+          background: $bl-color;
+          border-radius: 0.5px;
+          font-size: 20px;
+          color: $ft-color;
+          cursor: pointer;
+          .fa-solid, .fas {
+          font-size: xx-large;
+          }
         }
       }
     }
@@ -163,6 +194,15 @@ html {
         width: auto;
         .inner-form {
           display: block;
+          .input-field input#location {
+            width: auto;
+          }
+          .placeholder span {
+            display: none;
+          }
+        }
+        .plus-search {
+          font-size: large;
         }
       }
     }
@@ -198,12 +238,9 @@ html {
     body section#home-firstpart {
       justify-content: unset;
       background-size: auto;
-        .home-firstpart-title, h1, h2 {
-          position: unset;
-          padding: 15px;
-        }
-      form {
-        display: unset;
+      .home-firstpart-title, h1, h2 {
+        position: unset;
+        padding: 50px;
       }
     }
   }
