--- a/src/App/css/index.css
+++ b/src/App/css/index.css
@@ -27,7 +27,7 @@ html body {
 }
 html body header {
   width: 100%;
-  padding: 3rem 5rem;
+  padding: 3rem 5rem 1.5rem 5rem;
 }
 html body header nav {
   display: flex;
@@ -52,6 +52,24 @@ html body header nav ul {
   gap: 5rem;
   padding: 10px;
 }
+html body header nav ul li .heart {
+  display: flex;
+  font-size: x-large;
+  cursor: pointer;
+  transition: all 0.5s;
+  position: relative;
+}
+html body header nav ul li .heart span.counter {
+  font-size: small;
+  position: absolute;
+  left: 25px;
+  bottom: 5px;
+  background-color: #e89221;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+}
 html body header nav ul a {
   color: #333;
   font-weight: 600;
@@ -73,7 +91,7 @@ html body section#home-firstpart {
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
-  background-image: url("../img/img_e3malcuqbo75.png");
+  background-image: url("../img/salonblancvertcanardespritscandinave.png");
   height: 800px;
   background-repeat: no-repeat;
   background-size: contain;
@@ -89,6 +107,7 @@ html body section#home-firstpart .home-firstpart-title h1, html body section#hom
   font-size: large;
   color: #fff;
   text-align: center;
+  letter-spacing: 3px;
   padding: 15px 2px 10px 0px;
 }
 html body section#home-firstpart .home-firstpart-title h2, html body section#home-firstpart h1 h2, html body section#home-firstpart h2 h2 {
@@ -101,6 +120,7 @@ html body section#home-firstpart .home-firstpart-title h2, html body section#hom
   padding: 2px 15px 8px;
 }
 html body section#home-firstpart form {
+  z-index: 1;
   padding: 10px 10px 20px 10px;
   position: absolute;
   bottom: -10px;
@@ -166,16 +186,122 @@ html body section#home-firstpart form .btn-search {
   color: #333;
   cursor: pointer;
 }
-html body section#home-firstpart form .btn-search .fa-solid, html body section#home-firstpart form .btn-search .fas {
+html body section#home-firstpart form .btn-search .fa-magnifying-glass {
   font-size: xx-large;
 }
+html body section#home-secondpart {
+  position: relative;
+  margin: 10em 10% 10em 10%;
+  background-image: url("../img/salonmauveetbleuespritscandinave.png");
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+html body section#home-secondpart .home-secondpart-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  width: 400px;
+  height: 400px;
+  position: absolute;
+  left: 450px;
+  top: 50px;
+}
+html body section#home-secondpart .home-secondpart-title h1 {
+  color: #e89221;
+  font-size: medium;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+html body section#home-secondpart .home-secondpart-title h2 {
+  font-family: "PlayfairDisplay-VariableFont";
+  color: #1a75bb;
+  font-size: xx-large;
+  font-weight: bold;
+}
+html body section#home-secondpart .home-secondpart-title .btn-offres {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+  border: none;
+  padding: 20px 30px 20px 30px;
+  background: #1a75bb;
+  border-radius: 0.5px;
+  font-size: small;
+  font-weight: bold;
+  letter-spacing: 3px;
+  color: #fff;
+  cursor: pointer;
+}
+html body section#home-secondpart .home-secondpart-title .btn-offres a {
+  text-decoration: none;
+  color: #fff;
+}
+html body section#home-secondpart .home-secondpart-title .btn-offres .fa-arrow-right-long {
+  font-size: xx-large;
+  padding: 0px 0px 0px 10px;
+}
+html body .table {
+  margin: 25px 0px 50px 0px;
+  border: 1px solid #C0C0C0;
+  border-collapse: collapse;
+}
+html body .table thead tr th {
+  border: 1px solid #C0C0C0;
+  padding: 5px;
+  background: #F0F0F0;
+}
+html body .table tbody tr td {
+  border: 1px solid #C0C0C0;
+  padding: 5px;
+}
+html body footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #1a75bb;
+  width: 100%;
+  height: 400px;
+  font-size: large;
+}
+html body footer h1 {
+  color: #fff;
+}
+html body footer p {
+  color: #fff;
+}
+html body footer .btn-contact {
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 10px 15px 10px 15px;
+  background: #e89221;
+  border-radius: 0.5px;
+  font-size: small;
+  font-weight: bold;
+  letter-spacing: 3px;
+  color: #fff;
+  cursor: pointer;
+}
+html body footer .btn-contact i {
+  font-size: large;
+  padding: 0px 5px 0px 5px;
+}
+html body footer .social {
+  font-size: xx-large;
+  color: #fff;
+}
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 993px) {
   html {
     font-size: 56.25%;
   }
-  html body header {
-    padding: 2.2rem 5rem;
+  html body section#home-firstpart {
+    height: 600px;
   }
   html body section#home-firstpart form {
     bottom: -150px;
@@ -193,10 +319,25 @@ html body section#home-firstpart form .btn-search .fa-solid, html body section#h
   html body section#home-firstpart form .plus-search {
     font-size: large;
   }
+  html body section#home-secondpart {
+    margin: unset;
+    background-position: center;
+  }
+  html body section#home-secondpart .home-secondpart-title {
+    background-color: unset;
+    position: unset;
+    width: unset;
+  }
+  html body section#home-secondpart .home-secondpart-title h1, html body section#home-secondpart .home-secondpart-title h2 {
+    display: none;
+  }
 }
 @media only screen and (max-width: 767px) {
   html {
     font-size: 50%;
+  }
+  html body header {
+    padding: 3rem 5rem 0rem 5rem;
   }
   html body header nav {
     flex-direction: row;
@@ -219,7 +360,7 @@ html body section#home-firstpart form .btn-search .fa-solid, html body section#h
     justify-content: space-around;
     transition: 1s;
     gap: 0;
-    z-index: 1;
+    z-index: 2;
   }
   html body section#home-firstpart {
     justify-content: unset;
