--- a/src/App/css/index.css
+++ b/src/App/css/index.css
@@ -267,12 +267,14 @@ html body footer {
   width: 100%;
   height: 400px;
   font-size: large;
+  margin-top: 10px;
 }
 html body footer h1 {
   color: #fff;
 }
 html body footer p {
   color: #fff;
+  text-align: center;
 }
 html body footer .btn-contact {
   display: flex;
@@ -320,7 +322,7 @@ html body footer .social {
     font-size: large;
   }
   html body section#home-secondpart {
-    margin: unset;
+    margin: 10px 0px 10px 0px;
     background-position: center;
   }
   html body section#home-secondpart .home-secondpart-title {
