--- a/src/App/sass/index.scss
+++ b/src/App/sass/index.scss
@@ -277,11 +277,13 @@ html {
       width: 100%;
       height: 400px;
       font-size: large;
+      margin-top: 10px;
       h1 {
         color: $bg-color;
       }
       p {
         color: $bg-color;
+        text-align: center;
       }
       .btn-contact {
         display: flex;
@@ -332,7 +334,7 @@ html {
       }
     }
     body section#home-secondpart {
-      margin: unset;
+      margin: 10px 0px 10px 0px;
       background-position: center;
       .home-secondpart-title {
         background-color: unset;
